* new class Patterns for often needed RegExes. Contribute!! * CommentLineType: For line based Comments (//) * completely reworked XCLs: ** now support e.g. newlines between complex findings, quoted string containing brackets ** comment lines are supported between findings, but NOT in complex findinga with linebreaks ** More fault-tolerant overall * nonumerical answers to QuestionsNum are marked with an error (instead of throwing an exception) * several minor optimizations in SectionFinders, e.g. create resultlist of proper size, make pattern a field * added toString to SectionFinderResult